<resources>
    <string name="app_name">Totally Accurate ₿itcoin Mining Simulator</string>
    <string name="main_menu">START</string>
    <string name="app_title"><b>Totally Accurate
        \n₿itcoin Mining Simulator
        </b>
    </string>

    <string name="app_authors">by Jerry Deng &amp; Johnson Luong</string>
    <string name="helpBtn">Help</string>
    <string name="gameBtn">Play Game</string>
    <string name="optionsBtn">Options</string>
    <string name="bitCoinLogoLink">" • "<a href="https://freebiesupply.com/logos/bitcoin-logo/">Link to bitcoin logo</a></string>
    <string name="gridImgLink">" • "<a href="https://www.figma.com/file/pDBTKDXzDK6oZYA0oRJEZo/block?node-id=3%3A5">Link to block icons</a></string>
    <string name="cyberBGLink">" • "<a href="https://wallpapersafari.com/cyber-wallpapers/">Link to cyber wallpaper</a></string>
    <string name="resourcesUsed"><b>\nResources: </b> \nBlock icons used were designed and created by Jerry</string>
    <string name="courseInfo">" • "<a href="https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home">link to course page</a></string>
    <string name= "scanSound">" • "<a href = "https://www.myinstants.com/instant/discordjoin-4695/?utm_source=copyutm_medium=share">Link to scanning sound </a></string>
    <string name = "bitCoinFoundSound">" • "<a href = "https://www.myinstants.com/instant/discord-notification-38119/">Link to bitcoin found sound</a>  </string>
    <string name="gameBasics">

\n<b>Game Basics:</b>
        \n\"Totally Accurate ₿itcoin Mining Simulator\” is a knock-off version of the famous “Minesweeper” game.
        The game consists of a blockchain (a grid of blocks) with hidden Bitcoins to be uncovered.

\n\nThe objective of the game is to uncover all the Bitcoins in the fewest number of hashes (scans) in the blockchain.
        Hashing (by tapping) a block uncovers it, and determines if there is an unmined Bitcoin.
        \n\nIf the block contains a Bitcoin, the block reveals it.
        If there isn’t, then the block will initiate a scan that sweeps adjacent rows and columns, and displays the number of Bitcoins found in the scan of the adjacent rows and columns.

\n\nTapping on a <i>revealed</i> Bitcoin will also initiate a scan to search adjacent rows and columns for any Bitcoins as well.
        Tapping on already scanned empty blocks or already scanned revealed Bitcoins will not initiate another scan.
    </string>

    <string name="authorInfo"> "<b>\nAbout The Authors:</b>
\nJohnson and Jerry are two sleep deprived and functionally depressed 2nd year SFU CS &amp; SoSy students trying to make it through university.
 \n\nThis application is developed towards an assignment for the course CMPT 276: Intro to Software Engineering
    </string>
    <string name="num_mines_radio_button">" bitcoins"</string>
    <string name="blockchain_size_title"><b>Blockchain Size:</b></string>
    <string name="number_of_bitcoins_title"><b>Number of Bitcoins:</b></string>
    <string name="rows">" rows x "</string>
    <string name="columns">" columns"</string>
    <string name="num_bitcoin_display_text_1">"Found "</string>
    <string name="num_bitcoin_display_text_2">" of "</string>
    <string name="num_bitcoin_display_text_3">" Bitcoins"</string>
    <string name="num_attempted_scans"><b>"# Attempted Hashes (Scans): "</b></string>
    <string name="total_games">Total Games: t</string>
    <string name="best_score">Best Score: s</string>
    <string name="found_x_of_y_mines">Found x of y mines</string>
    <string name="scans_used_z"># Scans used: z</string>
    <string name="total_games_update">"Total Games: "</string>
    <string name="best_score_update">"Best Score: "</string>
    <string name="reset_all_data">Clear All Data</string>
    <string name="clear_games_played_amp_high_scores">Clear # Games Played &amp; Best Scores</string>
    <string name="options"><b>Options</b></string>
    <string name="not_applicable">" n/a"</string>
    <string name="winnerMsg">Good work on mining all those bitcoins, here\'s a free bitcoin for you 🎉.</string>
    <string name="congratsText">Congratulations!</string>
    <string name="help_title"><b>Help</b></string>
    <string name="main_menu_title"><b>Main Menu</b></string>
    <string name="dialog_ok">OK</string>
</resources>


