<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/techbackground"
    tools:context=".ui.MainMenuActivity">

    <Button
        android:id="@+id/helpBtn"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:text="@string/helpBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionsBtn"
        app:layout_constraintVertical_bias="0.219" />

    <Button
        android:id="@+id/gameBtn"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:text="@string/gameBtn"
        app:layout_constraintBottom_toTopOf="@+id/optionsBtn"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781" />

    <Button
        android:id="@+id/optionsBtn"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginBottom="168dp"
        android:text="@string/optionsBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.46" />

</androidx.constraintlayout.widget.ConstraintLayout>